# ads1x1x-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml  coverage.yml  docs.yml  test.yml
ci/: install.sh  script.sh
examples/: all_channels.rs  linux.rs  trait.rs  typed.rs
src/: adc.rs  channel.rs  channels.rs  construction.rs  conversion.rs  ic.rs  interface.rs  lib.rs  mode.rs  register.rs  types.rs
src/construction/: i2c.rs
src/devices/: ads1013.rs  channels.rs  common.rs  ic.rs  mod.rs
src/devices/ads1x1x/: common.rs  mod.rs
src/devices/ads1x1x/features/: mod.rs  tier2.rs
src/devices/ads1x1x/mode/: continuous.rs  mod.rs  oneshot.rs
src/devices/construction/: i2c.rs  mod.rs
src/devices/features/: mod.rs  tier1.rs  tier2.rs
src/devices/mode/: continuous.rs  mod.rs  oneshot.rs
tests/: ads1x13.rs  ads1x1x_i2c.rs  construction.rs  mux.rs  mux_i2c.rs  tier1.rs  tier1_i2c.rs  tier2.rs  tier2_i2c.rs
tests/common/: mod.rs
