[package]
name = "ads1x1x"
version = "0.2.2" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/ads1x1x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the ADS1x1x ultra-small, low-power analog-to-digital converters (ADC). Compatible with the devices: ADS1013, ADS1014, ADS1015, ADS1113, ADS1114 and ADS1115."
readme = "README.md"
keywords = ["adc", "analog", "driver", "i2c", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/ads1x1x-rs"
documentation = "https://docs.rs/ads1x1x"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2021"

[dependencies]
bitflags = "2"
embedded-hal = "1"
nb = "1"

[dev-dependencies]
embedded-hal-mock = { version = "0.10", default-features = false, features = ["eh1"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.4"

[profile.release]
lto = true
